=========
Changelog
=========

0.2 (unreleased)
================

- Buildout component: Allow custom buildout.cfg names.

- Use python version specific virtualenv, if availble. This helps with ancient
  Python 2.4 components.

- Internalize download hash handling using hashlib. Allow selection of hash
  function. (Thanks to Christine Koppelt.)

- Introduce new component modelling approach.

- Start writing documentation.